# WindowRect

./: CMakeLists.txt  LICENSE  README.md  widget.cpp  widget.h
